# matrix

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  main.cpp
.github/workflows/: ci.yaml  ci.yml
include/: matrix.hpp
tests/: CMakeLists.txt  matrix_test.cpp
